k8s/ingress-prep.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osm-web
  namespace: osm
  annotations:
    # kubernetes.io/ingress.class: haproxy
spec:
  rules:
    - host: web.localosm.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osm-status
  namespace: osm
  annotations:
    # kubernetes.io/ingress.class: haproxy
spec:
  rules:
    - host: status.localosm.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: status
                port:
                  number: 8080
